# HippocampalSWRDynamics

./: .gitignore  LICENSE  README.md  pyproject.toml
notebooks/: Figure1.ipynb  Figure2.ipynb  Figure3.ipynb  Figure4.ipynb  Figure5.ipynb  Figure6.ipynb  Figure7.ipynb  FigureS1a-c.ipynb  FigureS1d-g.ipynb  FigureS1h-j.ipynb  FigureS1k-m.ipynb  FigureS2.ipynb  FigureS3.ipynb  FigureS4.ipynb  FigureS5.ipynb  FigureS6.ipynb  FigureS7.ipynb
replay_structure/: config.py  descriptive_stats.py  deviance_models.py  diffusion_constant.py  forward_backward.py  highsynchronyevents.py  marginals.py  metadata.py  model_comparison.py  model_recovery.py  pf_analysis.py  predictive_analysis.py  ratday_preprocessing.py  read_write.py  ripple_preprocessing.py  run_snippet_preprocessing.py  simulated_neural_data.py  simulated_trajectories.py  structure_analysis_input.py  structure_models.py  structure_models_gridsearch.py  structure_trajectory.py  utils.py  viterbi.py
scripts/local/: generate_model_recovery_data.py  get_descriptive_stats.py  get_marginals.py  get_trajectories.py  preprocess_ratday_data.py  preprocess_spikemat_data.py  reformat_data_for_structure_analysis.py  run_deviance_explained.py  run_diffusion_constant.py  run_factorial_model_comparison.py  run_model.py  run_model_comparison.py  run_pf_analysis.py  run_predictive_analysis.py
scripts/o2/: diffusion_gridsearch.py  diffusion_gridsearch.sh  momentum_gridsearch.sh  momentum_gridsearch_ratdayripple.py  momentum_gridsearch_ratdayripple.sh  o2_lib.py  sg_gridsearch.py  sg_gridsearch.sh  viterbi_trajectories.py  (+1 more)
